--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_html: ^2.2.1
   archive: ^3.3.5
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
