Refactoring in Language class and added option to select a page to display

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_html: ^2.2.1
-  archive: ^3.3.5
+  archive: ^3.3.5  # obsolet
   path_provider: ^2.0.11
   download_assets: ^3.0.0
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
