--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.0.11
   download_assets: ^3.0.0
   path: ^1.8.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
