--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   path: ^1.8.2
   http: ^0.13.5
   dio: ^4.0.0 # TODO change to ^5.0.0 one the download_assets package was updated (security leak!)
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 
 dev_dependencies:
