--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.1 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,14 +35,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_html: ^2.2.1
+  cupertino_icons: ^1.0.0
+  flutter_html: ^3.0.0-beta.2
   archive: ^3.3.5  # obsolet
   path_provider: ^2.0.11
   download_assets: ^3.0.0
   path: ^1.8.2
-  http: ^0.13.5
-  dio: ^4.0.0 # TODO change to ^5.0.0 one the download_assets package was updated (security leak!)
+  http: ^1.0.0
+  dio: ^5.0.0
   flutter_localizations:
     sdk: flutter
   intl: any
