--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,5 +17,17 @@ jobs:
     - uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
-    - run: flutter pub get
-    - run: flutter test
+
+    - name: Install packages
+      run: flutter pub get
+
+    - name: Run full_coverage to generate test/full_coverage_test.dart
+      run: |
+        dart pub global activate full_coverage
+        dart pub global run full_coverage
+
+    - name: Run all tests and generate coverage information in coverage/lcov.info
+      run: flutter test --coverage
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
