--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,3 +33,5 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         files: coverage/lcov.info
+        fail_ci_if_error: true
+        verbose: true
