--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # flutter gen-l10n will generate files needed for i18n
+  generate: true
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
