--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.four_training.four_training">
+    package="net.app4training">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="four_training"
+        android:label="app4training"
         android:name="${applicationName}"
         android:icon="@mipmap/for_training"
         android:requestLegacyExternalStorage = "true">
