--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,4 +35,4 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         files: coverage/lcov.info
-        fail_ci_if_error: true
+        verbose: true
