Experimental: Add categories to menu
Organize the menu better by introducing categories that can be
expanded/collapsed (the active category gets expanded automatically).
For now the categories are hardcoded. (See #155)
Implemented with animated_tree_view but I see some serious rendering
issues, maybe switching to another solution would be better.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_riverpod: ^2.3.7
   html: ^0.15.4
+  animated_tree_view: ^2.1.0
 
 
 dev_dependencies:
