--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_riverpod: ^2.3.7
   html: ^0.15.4
   animated_tree_view: ^2.1.0
+  flex_color_scheme: ^7.3.1
 
 
 dev_dependencies:
