--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,6 +22,19 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    - unawaited_futures
+    - avoid_void_async
+    - always_declare_return_types
+    - join_return_with_assignment
+    - unnecessary_parenthesis
+    - no_literal_bool_comparisons
+
+    # also to consider:
+    # - prefer_final_in_for_each
+    # - directives_ordering
+    # - dead_code
+    # - use_string_buffers
+
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
