--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_riverpod: ^2.3.7
   html: ^0.15.4
   flex_color_scheme: ^7.3.1
+  url_launcher: ^6.2.2
+  flutter_linkify: ^6.0.0
 
 
 dev_dependencies:
