--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.6.0
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -50,6 +50,7 @@ dependencies:
   flex_color_scheme: ^7.3.1
   url_launcher: ^6.2.2
   flutter_linkify: ^6.0.0
+  package_info_plus: ^5.0.1
 
 
 dev_dependencies:
