--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   url_launcher: ^6.2.2
   flutter_linkify: ^6.0.0
   package_info_plus: ^5.0.1
+  workmanager: ^0.5.2
+  connectivity_plus: ^5.0.2
 
 
 dev_dependencies:
@@ -66,6 +68,8 @@ dev_dependencies:
   full_coverage: ^1.0.0
   custom_lint: ^0.5.2
   riverpod_lint: ^2.0.3
+  integration_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
