--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_linkify: ^6.0.0
   package_info_plus: ^5.0.1
   workmanager: ^0.5.2
+  share_plus: ^7.2.2
 
 
 dev_dependencies:
