--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   package_info_plus: ^5.0.1
   workmanager: ^0.5.2
   share_plus: ^7.2.2
+  open_filex: ^4.4.0
 
 
 dev_dependencies:
