--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,6 @@
+synthetic-package: false
 arb-dir: lib/l10n/locales
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
+output-dir: lib/l10n/generated
 nullable-getter: false
