Debug CLI dart version
Github workflow fails because dart format . wants to change one file -
locally it doesn't do that. So let's see which dart version is running
in the github workflow...

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,12 @@ jobs:
     - name: Install packages
       run: flutter pub get
 
+    - name: Show flutter version
+      run: flutter --version
+
+    - name: Show dart version
+      run: dart --version
+
     - name: Run full_coverage to generate test/full_coverage_test.dart
       run: |
         dart pub global activate full_coverage
