See what dart format wants to change
Still mysterious to me, github workflow has dart 3.8.1, locally I have
the same version but dart format have different opinions...

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
         dart pub global run full_coverage
 
     - name: Ensure standard dart formatting
-      run: dart format --output=none --set-exit-if-changed .
+      run: dart format --set-exit-if-changed .
 
     - name: Run linters
       run: |
