Look more into the dart formatting issue

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,9 @@ jobs:
         dart pub global run full_coverage
 
     - name: Ensure standard dart formatting
-      run: dart format --set-exit-if-changed .
+      run: |
+        dart format .
+        git diff
 
     - name: Run linters
       run: |
