Upgrade Gradle, AGP, Kotlin versions
- Bump Gradle to 8.10:
cd android
./gradlew wrapper --gradle-version 8.10
- Upgrade Android Gradle Plugin (AGP) to 8.3.0
- Update Kotlin to 1.9.22
- set compileSdkVersion to 35

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,8 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 34
+    namespace "net.app4training"
+    compileSdkVersion 35
     ndkVersion flutter.ndkVersion
 
     compileOptions {
